# DummyAI

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  CLAUDE.md  README.md  pyproject.toml
backend/config/: config.yaml  metric_catalog.yaml  metric_profiles.yaml  systems.yaml  tools.yaml
backend/scripts/: smoke_copilot.py
backend/src/: __init__.py  config.py  logging.py  main.py  schemas.py
backend/src/agents/: __init__.py  _llm.py  copilot_agent.py  guardrail.py
backend/src/agui/: __init__.py  runner.py
backend/src/clients/: __init__.py  elasticsearch.py  prometheus.py
backend/src/flow/: __init__.py  copilot.py
backend/src/prompts/: __init__.py  copilot.py
backend/src/tools/: __init__.py  _catalog.py  _time.py  systems.py
backend/src/tools/elasticsearch/: __init__.py  _common.py  tool_es_aggregation.py  tool_es_cluster_errors.py  tool_es_compare_windows.py  tool_es_drilldown_around.py  tool_es_field_search.py  tool_es_raw_query.py
backend/src/tools/embedding_metric_retrieval/: __init__.py  embeddings.py  index.py  resolver.py
backend/src/tools/metric_lookup/: __init__.py  resolver.py  tool.py
backend/src/tools/prometheus_advanced_query/: __init__.py  anomaly_detector.py  correlation_analyzer.py  engine.py  normalizer.py  promql_builder.py  schemas.py  tool.py  validation.py
backend/src/tools/sap_metric_categorized/: __init__.py  context_validation.py  summarizer.py  tool.py
backend/tests/: conftest.py  fakes.py  test_config.py  test_health.py
backend/tests/agents/: test_copilot_agent.py  test_guardrail.py  test_llm.py
backend/tests/agui/: test_copilot_endpoint_sse.py  test_emit_suppression.py
backend/tests/clients/: test_elasticsearch.py  test_logging.py  test_prometheus.py  test_registry.py
backend/tests/flow/: test_copilot_flow.py
backend/tests/prompts/: test_copilot_prompt.py
backend/tests/tools/: test_catalog.py  test_embedding_metric_retrieval.py  test_metric_lookup.py  test_sap_metric_categorized.py  test_summarizer.py  test_systems.py  test_time.py
backend/tests/tools/elasticsearch/: _helpers.py  conftest.py  test_aggregation.py  test_cluster_errors.py  test_clustering.py  test_compare_windows.py  test_drilldown.py  test_field_search.py  test_governance.py  test_profiles.py  (+3 more)
(+75 files in other folders)
