[project]
name = "dummyai-backend"
version = "0.1.0"
description = "Dummy AI — SAP Basis AI Operations Platform (FastAPI + LangGraph agents)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- web / transport ---
    "fastapi>=0.118,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "sse-starlette>=2.1,<3",
    # --- data sources ---
    "elasticsearch[async]>=9,<10",
    # --- agents ---
    "langchain>=1.3,<2",
    "langgraph>=1.2,<2",
    # LLM provider for the guardrail + answering agents (matches the langchain 1.x core line).
    "langchain-openai>=1,<2",
    # --- AG-UI streaming protocol ---
    "ag-ui-protocol>=0.1.19,<0.2",
    "ag-ui-langgraph>=0.0.42,<0.1",
    # --- tracing ---
    "langfuse>=4.12,<5",
    # --- config / logging ---
    "pydantic>=2.11.2,<3",
    "pydantic-settings>=2.14,<3",
    "pyyaml>=6,<7",
    "structlog>=25,<26",
]

[project.optional-dependencies]
# Heavy orchestration extra — pulls langchain-google-genai + langsmith. Keep out of core.
agents = ["deepagents>=0.6.12,<0.7"]
# NOTE: semantic metric_lookup (Phase 6) reuses the core `langchain-openai` dependency for its
# OpenAI embeddings backend — no separate extra. Vector search is pure-python cosine over the
# ~50-entry catalog (no faiss/numpy). Needs OPENAI_API_KEY in the environment.

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.13",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Surface our own deprecations (don't blanket-ignore). Narrow third-party ignores go here.
filterwarnings = ["default"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["ag_ui.*", "ag_ui_langgraph.*", "deepagents.*", "langfuse.*", "langchain_openai.*"]
ignore_missing_imports = true
